--- a/Reston.EProc.Runner.IIS/View/pengadaan-list.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-list.html
@@ -213,7 +213,7 @@
             <!-- Create the tabs -->
             <ul class="nav nav-tabs nav-stacked">
                 <li><a href="#header">Atas</a></li>
-                <li><a href="#perlu-perhatian">Perlu Perhatian</a></li>
+                <!--<li><a href="#perlu-perhatian">Perlu Perhatian</a></li>-->
                 <li><a href="#section-1">Dalam Pelaksanaan</a></li>
                 <li><a href="#section-2">Belum Terjadwal</a></li>
                 <li><a href="#section-3">Arsip</a></li>
