--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -77,7 +77,7 @@
                     </a>
                     <div class="navbar-custom-menu pull-left">
                         <ul class="nav navbar-nav">
-                            <li>	<a id="judul-page" href="#">Tambah Pengadaan</a></li>
+                            <li>	<a id="judul-page" href="#">Tambah Pengadaan Tertutup</a></li>
                         </ul>
                     </div>
                     <div class="navbar-custom-menu">
