--- a/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
+++ b/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
@@ -81,7 +81,7 @@
                     </a>
                     <div class="navbar-custom-menu pull-left">
                         <ul class="nav navbar-nav">
-                            <li>	<a id="judul-page" href="#">Sistem Monitoring</a></li>
+                            <li>	<a id="judul-page" href="#">Sistem Monitoring Pelaksanaan Pekerjaan</a></li>
                         </ul>
                     </div>
                     <div class="navbar-custom-menu">
