tambah no coa, PKS list,create approval, tambah workflow state buat sampe direksi, jangan lupa tambah role direksi, sama lega, rolenya: legal_admin , direksi, tambah di tabel role

--- a/Reston.EProc.Runner.IIS/View/pengadaan_add_terbuka.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan_add_terbuka.html
@@ -185,6 +185,10 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-6">
+                                            <label class="title">No COA</label>
+                                            <input type="text" class="form-control" id="noCoa">
+                                        </div>
+                                        <div class="form-group col-md-6">
                                             <label class="title">Mata Uang:</label>
                                             <select class="form-control select2" name="MataUang" disabled style="width: 100%;">
                                                 <option value="IDR" selected>Indonesia Rupiah</option>
